# simple_rl_experiments

./: installation.sh
run-tests/: pyproject.toml
run-tests/bash_bench_env/: __init__.py  bash_bench_env.py  sandbox.py  simplify_bash_bench.py
run-tests/bash_bench_env/sandbox/: Dockerfile
run-tests/basic_agent_env/: __init__.py  basic_agent_env.py
train/: bashbenchsimple.json  bashbenchtasks.json  pyproject.toml  requirements.txt  setup.py
train/examples/script/: train_ppo_qwen_base_bash.sh  train_ppo_qwen_base_math_lv35_1_node.sh
train/openrlhf/cli/: train_ppo_ray_env.py
train/openrlhf/datasets/: prompts_dataset.py
train/openrlhf/trainer/: ppo_trainer.py
train/openrlhf/trainer/ppo_utils/: __init__.py  experience_maker.py
train/openrlhf/trainer/ppo_utils/qwen_math_eval_toolkit/: __init__.py
train/openrlhf/trainer/ray/: __init__.py  launcher.py  ppo_actor.py  vllm_engine.py
train/openrlhf/utils/: interface.py
