[project]
name = "run-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ray[train]==2.42.0",
    "latex2sympy2>=1.9.1",
    "timeout-decorator>=0.5.0",
    "vllm>=0.6.5",
    "openrlhf",
    "pymongo",
    "beartype",
    "flash-attn==2.7.0.post2"
]

[tool.uv.sources]
openrlhf = { path = "../train" }
